# llmux

./: Cargo.toml  FEATURES.md
.github/workflows/: ci.yml  release.yml
docs/: ISSUES.md  attach-exit.md  chord-detach.md  idle-alerts.md  single-letter-aliases.md
migrations/: 001_initial.sql
src/: cli.rs  config.rs  db.rs  error.rs  main.rs  names.rs  workspace.rs
src/agent/: claude.rs  cursor.rs  mod.rs
src/session/: attach.rs  chord.rs  mod.rs  pty.rs  socket.rs  watcher.rs
tests/: attach_exit.rs  cli_aliases.rs  watcher_bell.rs
