[package]
name = "llmux"
version = "0.1.0"
edition = "2021"
description = "Agent multiplexer — spawn, attach, and manage CLI coding agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
petname = { version = "2", default-features = false, features = ["default-words"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal", "term", "process", "user"] }
serde_json = "1"
tabled = "0.17"
notify-rust = "4"
regex = "1"
scopeguard = "1"
rand = "0.8"
